# spiritolo

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: manage_settings.py  settings.json  settings.json.repo-mixin.jsonc
.devcontainer/: .inputrc  Dockerfile  devcontainer.json
common/: pyproject.toml
common/src/spiritolo_common/: __init__.py  supabase_client.py
common/tests/: conftest.py  test_cli_common.py  test_progress.py  test_summary.py
docs/: devcontainer-setup.md  future-direction.md  site-research.md  spirits-taxonomy.md
ingredients/: pyproject.toml
ingredients/src/ingredients/: __init__.py  cli.py  db.py  eval_set.py  parser.py  units.py  worker.py
ingredients/tests/: conftest.py  test_cli_main.py  test_cli_review.py  test_db.py  test_eval_set.py  test_parse_quantity.py  test_pre_clean.py  test_rule_abstain.py  test_rule_count_noun.py  test_rule_garnish_prefix.py  test_rule_qty_unit.py  test_rule_topup.py  test_units.py  test_worker.py
scraper/: pyproject.toml
scraper/config/: sites.yaml
scraper/eval/: classify-drink.jsonl  classify-urls.jsonl
scraper/eval/classify-drink/: bonappetit_old_fashioned.html  bonappetit_roast_chicken.html  bonappetit_strawberry_compote.html  diffordsguide_daiquiri.html  foodnetwork_beef_stew.html  foodnetwork_bourbon_pecan_pie.html  foodnetwork_cocktail_sauce.html  foodnetwork_linguine_clams.html  foodnetwork_mojito.html  foodnetwork_rum_cake.html  imbibe_dessert_category_cocktail.html  imbibe_espresso_martini.html  imbibe_hot_toddy.html  imbibe_paloma.html  liquor_margarita.html  punch_microdata_spritz.html  punch_whiskey_sour.html  seriouseats_caesar_salad.html
scraper/scripts/: manual_reclassification.py
scraper/src/: classify.py  classify_drink.py  classify_prompt.py  cli_common.py  client.py  db.py  discover.py  extract.py  fetch.py  jsonld.py  ollama_client.py  progress.py  prune.py  revalidate.py  structured.py  summary.py  supabase_client.py  validate.py  validation.py
scraper/tests/: conftest.py  test_classify.py  test_classify_drink.py  test_classify_prompt.py  test_cli_common.py  test_client.py  test_db.py  test_discover.py  test_extract.py  test_fetch.py  test_integration.py  test_jsonld.py  test_ollama_client.py  test_progress.py  test_prune.py  test_revalidate.py  test_structured.py  test_summary.py  test_validate.py  test_validation.py
scraper/tests/fixtures/jsonld/: author_bare_string.html  graph_wrapper.html  image_array_of_objects.html  image_as_array.html  image_as_object.html  malformed_then_valid.html  microdata.html  multiple_scripts.html  no_jsonld.html  standard.html  top_level_array.html  type_as_array.html
supabase/: config.toml
web/: .gitignore  (+5 more)
(+52 files in other folders)
