[project]
name = "spiritolo-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "cssselect>=1.2",
    "python-dotenv>=1.0",
    "ollama>=0.4",
    "psycopg[binary]>=3.2",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["."]}

[tool.setuptools.package-dir]
"scraper.src" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
